nextcloud-deplyment/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      role: db
  template:
    metadata:
      labels:
        app: nextcloud
        role: db
    spec:
      containers:
      - name: nextcloud-db
        image: mariadb:10.5
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: nextcloud-db
          mountPath: /var/lib/mysql
      volumes:
      - name: nextcloud-db
        persistentVolumeClaim:
          claimName: nextcloud-pvc
