nextcloud-deplyment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: / # You can specify a path if needed, e.g., /nextcloud
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
